[gd_scene load_steps=6 format=3 uid="uid://bdoih6i4e544o"]

[ext_resource type="Texture2D" uid="uid://beuycd5o4nrj7" path="res://images/UI/Untitled146_20241128133911.png" id="1_pwmwk"]
[ext_resource type="Script" path="res://scripts/UI/main_menu.gd" id="1_tsx0n"]
[ext_resource type="Texture2D" uid="uid://dhao8dfdkahn1" path="res://images/UI/Quit Button.png" id="1_uhdlp"]
[ext_resource type="Texture2D" uid="uid://djjyvup20gwdy" path="res://images/UI/Settings Button.png" id="2_bhomi"]
[ext_resource type="Texture2D" uid="uid://0ug226hayure" path="res://images/UI/Start Button.png" id="3_04mn6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tsx0n")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 648.0
grow_vertical = 0
text = "v0.0.0"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -480.0
offset_right = 240.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_pwmwk")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="start" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
size_flags_stretch_ratio = 2.94
icon = ExtResource("3_04mn6")
flat = true

[node name="settings" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
size_flags_stretch_ratio = 2.94
icon = ExtResource("2_bhomi")
flat = true

[node name="quit" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
size_flags_stretch_ratio = 2.94
icon = ExtResource("1_uhdlp")
flat = true

[node name="Credits" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
size_flags_stretch_ratio = 2.94
text = "Credits"
flat = true

[connection signal="pressed" from="ScrollContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/settings" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/quit" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Credits" to="." method="_on_button_2_pressed"]
